<resources>
    <string name="app_name">Android Template</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <!-- Login page -->
    <string name="title_login_page">Welcome Back</string>
    <string name="caption_login_page">Enter your details below to use your account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- Forgot page -->
    <string name="caption_forgot_page">Don\'t worry! It happens. Please enter your email address associated with your account and we\'ll send you an email.</string>
    <string name="submit">Submit</string>
    <!-- Reset page -->
    <string name="create_new_password">Create New Password</string>
    <string name="reset_password_caption">Enter the unique code that has been sent to your email and enter a new password.</string>
    <string name="unique_code">Unique Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <!-- Home page -->
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
</resources>