<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>
        <variable name="viewModel"
            type="com.apps.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_of_login_illustration"
            android:layout_margin="@dimen/extra_large"
            android:contentDescription="@null"
            android:src="@drawable/svg_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:layout_marginHorizontal="@dimen/large"
            android:text="@string/title_login_page"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/caption"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/caption_login_page"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:layout_marginHorizontal="@dimen/large"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_alternate_email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:text="user@example.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginHorizontal="@dimen/large"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:text="1234567890"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:onClick="@{() -> viewModel.openForgotPage()}"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_btn"
            android:layout_marginVertical="@dimen/large"
            android:layout_marginHorizontal="@dimen/large"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>