<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.forgot.ForgotFragment">

    <data>
        <variable name="viewModel"
            type="com.apps.ui.forgot.ForgotViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:onClick="@{() -> viewModel.goBack()}"
            android:padding="@dimen/extra_small"
            app:srcCompat="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_of_login_illustration"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginHorizontal="@dimen/extra_large"
            android:contentDescription="@null"
            android:src="@drawable/svg_forgot"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:layout_marginHorizontal="@dimen/large"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/caption"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small"
            android:text="@string/caption_forgot_page"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:layout_marginHorizontal="@dimen/large"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_alternate_email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:text="user@example.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_btn"
            android:layout_marginVertical="@dimen/large"
            android:layout_marginHorizontal="@dimen/large"
            android:onClick="@{() -> viewModel.forgotPassword()}"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>